# XMU-learning_DIP

./: .gitignore
Lab/: pyproject.toml
Lab/Lab1/Project1_smooth image/: main.py
Lab/Lab1/Project2-contrast adjustment/: main.py
Lab/Lab1/Project3-sharpen image/: main.py
Lab/Lab2/: .gitignore
Lab/Lab2/Project1_segmentation/: main.py
Lab/Lab2/Project2_edge_detection_SAM/: main.py
Lab/Lab2/Project2_edge_detection_SAM/baseball_masks/: metadata.csv
Lab/Lab2/Project2_edge_detection_SAM/port_masks/: metadata.csv
Lab/Lab2/Project3_Image_Restoration/: main.py
Lab/Lab2/SAM/: sam2.1_hiera_tiny.url
Report/: .gitignore  Report.md
Report/.obsidian/: workspace.json
