[project]
name = "XMU-learning_DIP"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Exxon", email = "exxonliu001@yahoo.com"},
]
dependencies = ["opencv-python>=4.12.0.88", "numpy>=2.2.6", "torch>=2.9.1", "torchvision>=0.24.1", "git+https://github.com/facebookresearch/segment-anything-2.git", "pandas>=2.3.3"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
